--- a/vue/package.json
+++ b/vue/package.json
@@ -1,15 +1,19 @@
 {
-  "author": "Tendermint, Inc \u003chello@tendermint.com\u003e",
+  "author": "Tendermint, Inc <hello@tendermint.com>",
   "dependencies": {
     "@cosmjs/launchpad": "0.27.0",
     "@cosmjs/proto-signing": "0.27.0",
     "@cosmjs/stargate": "0.27.0",
     "@starport/vue": "^0.3.10",
     "@starport/vuex": "^0.3.10",
+    "bootstrap": "^5.2.3",
+    "bootstrap-vue": "^2.23.1",
     "buffer": "^6.0.3",
     "core-js": "^3.18.2",
+    "lodash-es": "^4.17.21",
+    "mdb-vue-ui-kit": "^3.1.1",
     "planet-client-ts": "file:../ts-client",
-    "vue": "^3.2.6",
+    "vue": "^3.2.45",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.2"
   },
@@ -28,7 +32,7 @@
   "private": true,
   "scripts": {
     "build": "vite build",
-    "dev": "vite",
+    "dev": "vite --host",
     "postinstall": "node postinstall.js",
     "prepare": "node prepare.js",
     "serve": "vite preview"
