--- a/earth.yml
+++ b/earth.yml
@@ -14,6 +14,10 @@ accounts:
   coins:
   - 500token
   - 100000000stake
+- name: mallory
+  coins:
+  - 500token
+  - 100000000stake
 faucet:
   name: bob
   coins:
