--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,9 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "4.6.0"
+    "react-icons": "4.6.0",
+    "reactflow": "^11.3.3",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "18.11.9",
